--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
           <section class="row">            
             <div class="col">
-                <img  class="img" src="imagens/cantenbury-fortaleza.jpg" alt="foto de paisagem bonitinha" width="80%" height="10%">
+                <img  class="img" src="cantenbury-fortaleza.jpg" alt="foto de paisagem bonitinha" width="80%" height="10%">
                 <br>
                 <br>
                 <h1>Bem-vindo a Cantenbury!</h1>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="col">
-                <img  class="img" src="imagens/Canterbury-Cathedral.avif" alt="foto de paisagem bonitinha"  width="80%">
+                <img  class="img" src="Canterbury-Cathedral.avif" alt="foto de paisagem bonitinha"  width="80%">
                 <br>
                 <br>
                 <h1>Catedral de Cantenbury</h1>
@@ -69,7 +69,7 @@
 
           <section class="row">            
             <div class="col">
-                <img class="img" src="imagens/cantenbury-tomas.jpg" alt="foto de paisagem bonitinha" width="80%">
+                <img class="img" src="cantenbury-tomas.jpg" alt="foto de paisagem bonitinha" width="80%">
                 <br>
             </div>
 
@@ -86,7 +86,7 @@
           
           <section class="row">            
             <div class="col">
-                <img  class="img" src="imagens/castelo.webp" alt="foto de paisagem bonitinha" width="80%">
+                <img  class="img" src="castelo.webp" alt="foto de paisagem bonitinha" width="80%">
                 <br>
                 <br>
                 <h1>O Castelo de Cantenbury</h1>
@@ -98,7 +98,7 @@
             </div>
 
             <div class="col">
-                <img  class="img" src="imagens/cantenbury-lago.jpg" alt="foto de paisagem bonitinha"  width="80%">
+                <img  class="img" src="cantenbury-lago.jpg" alt="foto de paisagem bonitinha"  width="80%">
                 <br>
                 <br>
                 <h1>Os Jardins e Parques</h1>
@@ -123,7 +123,7 @@
             </div>
 
             <div class="col">
-                <img  class="img" src="imagens/cantenbury-mercados.jpg" alt="foto de paisagem bonitinha"  width="80%">                
+                <img  class="img" src="cantenbury-mercados.jpg" alt="foto de paisagem bonitinha"  width="80%">                
             </div>
 
           </section>
